--- a/src/blogSingle.html
+++ b/src/blogSingle.html
@@ -74,67 +74,93 @@
     <!-- COMMENTS -->
 
     <div class="container-fluid container-comments">
-      <div class="row row__50">
-        <h3 class="h3">Comments:</h3>
-      </div>
-      <div class="row row__50">
-        <div class="col-lg-2 col-md-12 col-sm-12 comments__left">
-          <div class="comments__img-box">
-            <img src="#" alt="#" />
-          </div>
-        </div>
-        <div class="col-lg-10 col-md-12 col-sm-12 comments__right">
-          <div class="row justify-content-between margin-sm-bot">
-            <div class="col-lg-4 col-md-12 col-sm-12">
-              <p class="capital capital__2">John Leonard</p>
-            </div>
-            <div class="col-lg-4 col-md-12 col-sm-12 text-right">
-              <p class="capital capital__2">
-                May 31, 2016 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                  class="text-right"
-                  >reply</span
-                >
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <p class="text-box__paragraph">
-              Nullam ac dui et purus malesuada gravida id fermentum orci. In eu
-              ipsum quis urna hendrerit condimentum vitae a mauris. In congue
-              turpis purus, vitae tempus ante id. Donec orci arcu, sagittis ut
-              finibus vitae.
-            </p>
-          </div>
-        </div>
-      </div>
+      <div class="row row__50 d-flex">
+        <div class="col">
+          <div class="card c0">
+            <div class="card-body p-4">
+              <h2 class="h2 text-box__head-secondary">Comments:</h2>
 
-      <div class="row row__50 padding-left-big">
-        <div class="col-lg-2 col-md-12 col-sm-12 comments__left">
-          <div class="comments__img-box">
-            <img src="#" alt="#" />
-          </div>
-        </div>
-        <div class="col-lg-10 col-md-12 col-sm-12 comments__right">
-          <div class="row justify-content-between margin-sm-bot">
-            <div class="col-lg-4 col-md-12 col-sm-12">
-              <p class="capital capital__2">John Leonard</p>
+              <div class="row">
+                <div class="col">
+                  <div class="d-flex flex-start">
+                    <img
+                      class="
+                        comments__img-box2
+                        rounded-circle
+                        shadow-1-strong
+                        me-3
+                      "
+                      src="#"
+                      alt="avatar"
+                      width="160"
+                      height="160"
+                    />
+                    <div class="flex-grow-1 flex-shrink-1">
+                      <div>
+                        <div
+                          class="
+                            d-flex
+                            justify-content-between
+                            align-items-center
+                          "
+                        >
+                          <p class="capital capital__2">John Leonard</p>
+                          <p class="capital">
+                            MAY 31, 2016 &nbsp;&nbsp;&nbsp;
+                            <span>REPLY</span>
+                          </p>
+                        </div>
+                        <p class="text-box__paragraph">
+                          Nullam ac dui et purus malesuada gravida id fermentum
+                          orci. In eu ipsum quis urna hendrerit condimentum
+                          vitae a mauris. In congue turpis purus, vitae tempus
+                          ante id. Donec orci arcu, sagittis ut finibus vitae.
+                        </p>
+                      </div>
+
+                      <div class="d-flex flex-start mt-4">
+                        <img
+                          class="
+                            comments__img-box
+                            rounded-circle
+                            shadow-1-strong
+                          "
+                          src="#"
+                          alt="avatar"
+                          width="160"
+                          height="160"
+                        />
+
+                        <div class="flex-grow-1 flex-shrink-1">
+                          <div>
+                            <div
+                              class="
+                                d-flex
+                                justify-content-between
+                                align-items-center
+                              "
+                            >
+                              <p class="capital capital__2">Jody Parker</p>
+                              <p class="capital">
+                                MAY 31, 2016 &nbsp;&nbsp;&nbsp;
+                                <span>REPLY</span>
+                              </p>
+                            </div>
+                            <p class="text-box__paragraph">
+                              Aenean eget varius augue, nec gravida lectus.
+                              Pellentesque in imperdiet us, ac efficitur risus.
+                              Etiam laoreet dapibus lorem vitae aliquam. Sed
+                              elementum ligula, molestie consectetur massa
+                              rhoncus at.
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col-lg-4 col-md-12 col-sm-12">
-              <p class="capital capital__2">
-                May 31, 2016 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
-                  class="text-right"
-                  >reply</span
-                >
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <p class="text-box__paragraph">
-              Nullam ac dui et purus malesuada gravida id fermentum orci. In eu
-              ipsum quis urna hendrerit condimentum vitae a mauris. In congue
-              turpis purus, vitae tempus ante id. Donec orci arcu, sagittis ut
-              finibus vitae.
-            </p>
           </div>
         </div>
       </div>
@@ -252,7 +278,6 @@
       </div>
     </footer>
 
-    <!-- <my-footer></my-footer> -->
     <script src="js/script.js"></script>
 
     <script
